--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta property="og:title" content="Muhammad Raihan - Web Developer">
+<meta property="og:description" content="Modern CV Website with Premium UI">
+<meta property="og:image" content="assets/images/profile.webp">
+<meta property="og:type" content="website">
 <title>Muhammad Raihan | Web Developer</title>
 
 <link rel="icon" href="favicon.ico">
