--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <div class="hero-buttons">
         <button onclick="openPreview()">👁 Preview</button>
         <button onclick="downloadCV()">⬇ Download CV</button>
-        <a href="https://github.com/usernamekamu" target="_blank">
+        <a href="https://github.com/mraihan8" target="_blank">
           <button>💻 GitHub</button>
         </a>
       </div>
@@ -49,8 +49,9 @@
   <div class="card">
     <h2>About Me</h2>
     <p>
-      Saya seorang Web Developer yang fokus pada pembuatan website modern,
-      responsif, dan premium design dengan performa optimal.
+      Profesional di Bidang Network & Security Engineer dengan pengalaman lebih dari 1 tahun dalam
+mengimplementasikan kebijakan serta pengelolaan dan trobleshooting agar menjadi solusi keamaan
+jaringan agar memehuni standar keamaan di CISO Mandiri.
     </p>
   </div>
 
