Add sidebar with profile and services sections
Added a sidebar with profile information and services offered.

--- a/index.html
+++ b/index.html
@@ -28,6 +28,63 @@
   </div>
 </nav>
 
+   <div class="layout">
+
+  <!-- LEFT SIDEBAR -->
+  <aside class="sidebar">
+    <div class="sidebar-content">
+
+      <img src="assets/images/profile.webp" class="profile-img">
+
+      <h1>Muhammad Raihan</h1>
+      <p class="role">Web Developer</p>
+
+      <div class="social">
+        <a href="https://github.com/mraihan8" target="_blank">GitHub</a>
+        <a href="#">LinkedIn</a>
+      </div>
+
+    </div>
+  </aside>
+
+  <!-- RIGHT CONTENT -->
+  <main class="content">
+
+    <section>
+      <h2>About Me</h2>
+      <p>
+        Saya seorang Web Developer yang fokus pada UI modern,
+        animasi smooth, dan pengalaman premium.
+      </p>
+    </section>
+
+    <section>
+      <h2>My Services</h2>
+
+      <div class="service-grid">
+        <div class="card">
+          <h3>Web Development</h3>
+          <p>Website modern & responsif.</p>
+        </div>
+
+        <div class="card">
+          <h3>SEO Optimization</h3>
+          <p>Optimasi performa & ranking.</p>
+        </div>
+
+        <div class="card">
+          <h3>UI/UX Design</h3>
+          <p>Design premium & clean.</p>
+        </div>
+
+        <div class="card">
+          <h3>Maintenance</h3>
+          <p>Perawatan & update berkala.</p>
+        </div>
+      </div>
+    </section>
+    
+
 <div class="container">
   <div class="layout">
 
