--- a/index.html
+++ b/index.html
@@ -7,12 +7,13 @@
 
   <link rel="icon" href="favicon.ico">
 
-  <!-- Bootstrap CSS -->
-  <link href="node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+  <!-- Bootstrap 5.3.8 CDN -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css"
+        rel="stylesheet"
+        integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB"
+        crossorigin="anonymous">
 
-  <!-- Custom CSS -->
   <link rel="stylesheet" href="assets/css/style.css">
-
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
 </head>
 
@@ -21,7 +22,7 @@
 <div class="container-fluid">
   <div class="row min-vh-100">
 
-    <!-- SIDEBAR -->
+    <!-- Sidebar -->
     <aside class="col-lg-4 col-xl-3 sidebar p-4 d-flex flex-column justify-content-between">
 
       <div>
@@ -31,14 +32,14 @@
           <p class="text-accent">Web Developer</p>
         </div>
 
-        <nav class="nav flex-column text-center mb-4">
+        <nav class="nav flex-column text-center">
           <a class="nav-link" href="#about">About</a>
           <a class="nav-link" href="#services">Services</a>
           <a class="nav-link" href="#contact">Contact</a>
         </nav>
       </div>
 
-      <div>
+      <div class="mt-4">
 
         <button id="previewBtn" class="btn btn-primary w-100 mb-2">
           Preview CV
@@ -57,7 +58,7 @@
 
     </aside>
 
-    <!-- CONTENT -->
+    <!-- Content -->
     <main class="col-lg-8 col-xl-9 content p-5">
 
       <section id="about" class="mb-5">
@@ -97,7 +98,7 @@
   </div>
 </div>
 
-<!-- Preview Modal Bootstrap -->
+<!-- Preview Modal -->
 <div class="modal fade" id="cvModal" tabindex="-1">
   <div class="modal-dialog modal-xl modal-dialog-centered">
     <div class="modal-content">
@@ -112,10 +113,11 @@
   </div>
 </div>
 
-<!-- Bootstrap JS -->
-<script src="node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+<!-- Bootstrap JS CDN -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
+        crossorigin="anonymous"></script>
 
-<!-- Custom JS -->
 <script src="assets/js/script.js"></script>
 
 </body>
