--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 
       <section id="contact">
         <h2 class="fw-bold mb-3">Contact</h2>
-        <p>Email: your@email.com</p>
+        <p>Email: raihan8muhammad@gmail.com</p>
       </section>
 
     </main>
