--- a/index.html
+++ b/index.html
@@ -41,14 +41,17 @@
 
       <div class="mt-4">
 
+        <!-- PREVIEW -->
         <button id="previewBtn" class="btn btn-primary w-100 mb-2">
           Preview CV
         </button>
 
+        <!-- DOWNLOAD -->
         <button id="downloadBtn" class="btn btn-glass w-100 mb-3">
           Download CV (<span id="downloadCount">0</span>)
         </button>
 
+        <!-- MODE TOGGLE -->
         <div class="d-flex justify-content-center gap-2">
           <button id="lightMode" class="btn btn-outline-secondary btn-sm">☀</button>
           <button id="darkMode" class="btn btn-outline-secondary btn-sm">🌙</button>
@@ -90,7 +93,7 @@
 
       <section id="contact">
         <h2 class="fw-bold mb-3">Contact</h2>
-        <p>Email: raihan8muhammad@gmail.com</p>
+        <p>Email: your@email.com</p>
       </section>
 
     </main>
@@ -107,19 +110,19 @@
         <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
       </div>
       <div class="modal-body p-0">
-        <iframe src="assets/cv/CV-Raihan.pdf" width="100%" height="600px"></iframe>
+        <!-- FIXED PATH -->
+        <iframe src="cv.pdf" width="100%" height="600px"></iframe>
       </div>
     </div>
   </div>
 </div>
 
-<!-- Bootstrap JS CDN -->
+<!-- Bootstrap JS -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
         crossorigin="anonymous"></script>
 
 <script src="assets/js/script.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.min.js" integrity="sha384-G/EV+4j2dNv+tEPo3++6LCgdCROaejBqfUeNjuKAiuXbjrxilcCdDz6ZAVfHWe1Y" crossorigin="anonymous"></script>
+
 </body>
 </html>
