--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Raihan | Professional CV</title>
 
+  
   <link rel="icon" href="favicon.ico">
 
   <!-- Bootstrap 5.3.8 CDN -->
@@ -45,9 +46,14 @@
         <button id="previewBtn" class="btn btn-primary w-100 mb-2">
           Preview CV
         </button>
+<!-- PREVIEW (OPEN NEW TAB) -->
+<button id="previewBtn" href="cv.pdf" download="cv.pdf" target="_blank" class="btn btn-primary w-100 mb-2">
+  Preview CV
+</button>
+
 
         <!-- DOWNLOAD -->
-        <button id="downloadBtn" class="btn btn-glass w-100 mb-3">
+        <button id="downloadBtn" download="cv.pdf" class="btn btn-glass w-100 mb-3">
           Download CV (<span id="downloadCount">0</span>)
         </button>
 
