--- a/index.html
+++ b/index.html
@@ -41,24 +41,19 @@
       </div>
 
       <div class="mt-4">
-
-      
         <!-- PREVIEW (OPEN NEW TAB) -->
-        <button id="previewBtn" href="cv.pdf" download="cv.pdf" target="_blank" class="btn btn-primary w-100 mb-2">
+        <button id="previewBtn" class="btn btn-primary w-100 mb-2" href="cv.pdf" download="cv.pdf" target="_blank">
           Preview CV
         </button>
         <!-- DOWNLOAD DIRECT -->
         <button id="downloadBtn" href="cv.pdf" download="CV-Raihan.pdf" class="btn btn-glass w-100 mb-3">
           Download CV
         </button>
-
-       
         <!-- MODE TOGGLE -->
         <div class="d-flex justify-content-center gap-2">
           <button id="lightMode" class="btn btn-outline-secondary btn-sm">☀</button>
           <button id="darkMode" class="btn btn-outline-secondary btn-sm">🌙</button>
         </div>
-
       </div>
 
     </aside>
