Update CV button and contact email

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
       <div class="mt-4">
         <!-- PREVIEW (OPEN NEW TAB) -->
-        <button id="previewBtn" class="btn btn-primary w-100 mb-2" href="cv.pdf" download="cv.pdf" target="_blank">
+        <button id="previewBtn" class="btn btn-primary w-100 mb-2"  target="_blank">
           Preview CV
         </button>
         <!-- DOWNLOAD DIRECT -->
@@ -90,7 +90,7 @@
 
       <section id="contact">
         <h2 class="fw-bold mb-3">Contact</h2>
-        <p>Email: your@email.com</p>
+        <p>Email: raihan8muhammad@gmail.com</p>
       </section>
 
     </main>
