Refactor preview and download buttons in index.html

--- a/index.html
+++ b/index.html
@@ -41,14 +41,16 @@
       </div>
 
       <div class="mt-4">
-        <!-- PREVIEW (OPEN NEW TAB) -->
-        <button id="previewBtn" class="btn btn-primary w-100 mb-2"  target="_blank">
+        <!-- PREVIEW -->
+        <button id="previewBtn" class="btn btn-primary w-100 mb-2">
           Preview CV
         </button>
-        <!-- DOWNLOAD DIRECT -->
-        <button id="downloadBtn" href="cv.pdf" download="CV-Raihan.pdf" class="btn btn-glass w-100 mb-3">
-          Download CV
+
+        <!-- DOWNLOAD -->
+        <button id="downloadBtn" class="btn btn-glass w-100 mb-3">
+          Download CV (<span id="downloadCount">0</span>)
         </button>
+        
         <!-- MODE TOGGLE -->
         <div class="d-flex justify-content-center gap-2">
           <button id="lightMode" class="btn btn-outline-secondary btn-sm">☀</button>
