--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
         <!-- DOWNLOAD -->
         <button id="downloadBtn" class="btn btn-glass w-100 mb-3">
-          Download CV (<span id="downloadCount">0</span>)
+          Download CV
         </button>
         
         <!-- MODE TOGGLE -->
