--- a/index.html
+++ b/index.html
@@ -19,6 +19,27 @@
 </head>
 
 <body>
+<!-- Sidebar Mini (Logo Bar) -->
+<div class="sidebar-mini">
+  <div class="toggle-btn" id="toggle-btn">☰</div>
+  <div class="icon-list">
+    <i>🏠</i>
+    <i>👤</i>
+    <i>📞</i>
+    <i>💼</i>
+  </div>
+</div>
+
+<!-- Sidebar Full -->
+<div class="sidebar-full" id="sidebar-full">
+  <ul>
+    <li>Home</li>
+    <li>About</li>
+    <li>Services</li>
+    <li>Portfolio</li>
+    <li>Contact</li>
+  </ul>
+</div>
 
 <div class="container-fluid">
   <div class="row min-vh-100">
