--- a/index.html
+++ b/index.html
@@ -1,9 +1,50 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="id"> <!-- Default language will be Indonesian -->
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Muhammad Raihan Al Fadhil - Web CV</title>
+    <title data-translate="title">Muhammad Raihan Al Fadhil - Web CV</title>
+
+    <!-- SEO Meta Tags -->
+    <meta name="description" data-translate="meta_description" content="Profil Web CV profesional Muhammad Raihan Al Fadhil, seorang Engineer Endpoint Security di CISO Mandiri dengan keahlian di Jaringan, Keamanan, Pemrograman, dan Pengembangan Web.">
+    <meta name="keywords" data-translate="meta_keywords" content="Muhammad Raihan Al Fadhil, CV, Web CV, Engineer Endpoint Security, CISO Mandiri, Jaringan, Keamanan, Pemrograman, Python, Java, Web Development, Resume, IT Security, Portfolio">
+    <meta name="author" content="Muhammad Raihan Al Fadhil">
+    <link rel="canonical" href="https://yourwebsite.com/"> <!-- Ganti dengan URL asli website kamu -->
+
+    <!-- Open Graph / Facebook / LinkedIn -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://yourwebsite.com/"> <!-- Ganti dengan URL asli website kamu -->
+    <meta property="og:title" data-translate="og_title" content="Muhammad Raihan Al Fadhil - Web CV">
+    <meta property="og:description" data-translate="og_description" content="Profil Web CV profesional Muhammad Raihan Al Fadhil, seorang Engineer Endpoint Security di CISO Mandiri dengan keahlian di Jaringan, Keamanan, Pemrograman, dan Pengembangan Web.">
+    <meta property="og:image" content="https://yourwebsite.com/assets/images/profile.webp"> <!-- Ganti dengan URL lengkap profile.webp kamu -->
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://yourwebsite.com/"> <!-- Ganti dengan URL asli website kamu -->
+    <meta property="twitter:title" data-translate="twitter_title" content="Muhammad Raihan Al Fadhil - Web CV">
+    <meta property="twitter:description" data-translate="twitter_description" content="Profil Web CV profesional Muhammad Raihan Al Fadhil, seorang Engineer Endpoint Security di CISO Mandiri dengan keahlian di Jaringan, Keamanan, Pemrograman, dan Pengembangan Web.">
+    <meta property="twitter:image" content="https://yourwebsite.com/assets/images/profile.webp"> <!-- Ganti dengan URL lengkap profile.webp kamu -->
+
+    <!-- JSON-LD Schema Markup (Person) -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Person",
+      "name": "Muhammad Raihan Al Fadhil",
+      "jobTitle": "Engineer Endpoint Security CISO Mandiri",
+      "url": "https://yourwebsite.com/", <!-- Ganti dengan URL asli website kamu -->
+      "image": "https://yourwebsite.com/assets/images/profile.webp", <!-- Ganti dengan URL lengkap profile.webp kamu -->
+      "sameAs": [
+        "https://www.linkedin.com/in/mraihanalfadhil/",
+        "https://www.facebook.com/lupanamasimi/",
+        "https://www.instagram.com/kopi_jahe8/",
+        "https://www.youtube.com/@raihanfadhil8"
+      ],
+      "alumniOf": "Universitas Kamu (jika ada)", <!-- Tambahkan jika relevan -->
+      "knowsAbout": ["Network Security", "Endpoint Security", "Cybersecurity", "Programming", "Web Development"]
+    }
+    </script>
+
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous"> 
     
@@ -26,12 +67,17 @@
         <nav class="navbar container">
             <div class="logo">MRF</div>
             <ul class="nav-links">
-                <li><a href="#home">Home</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#skills">Skills</a></li>
-                <li><a href="#contact">Contact</a></li>
+                <li><a href="#home" data-translate="nav_home">Home</a></li>
+                <li><a href="#about" data-translate="nav_about">About</a></li>
+                <li><a href="#skills" data-translate="nav_skills">Skills</a></li>
+                <li><a href="#contact" data-translate="nav_contact">Contact</a></li>
+                <li>
+                    <button id="lang-toggle" class="lang-toggle" aria-label="Toggle language">
+                        <img src="assets/images/id_flag.png" alt="ID Flag" id="flag-icon" class="flag-icon">
+                    </button>
+                </li>
                 <li><button id="theme-toggle" class="theme-toggle" aria-label="Toggle dark and light mode"><i class="fas fa-sun"></i></button></li>
-                <li><button id="download-cv" class="download-button">Download CV</button></li>
+                <li><button id="download-cv" class="download-button" data-translate="nav_download_cv">Download CV</button></li>
             </ul>
             <!-- Burger menu untuk tampilan mobile -->
             <div class="burger-menu" id="burger-menu" aria-label="Open navigation menu">
@@ -44,13 +90,12 @@
     <main class="page-transition">
         <!-- Bagian Home/Hero -->
         <section id="home" class="hero section">
-            <div class="hero-content glass-effect">
+            <div class="hero-content glass-effect" data-scroll-reveal="left">
                 <div class="profile-pic-container">
-                    <!-- Foto profil dari folder assets/images/ dengan format webp -->
                     <img src="assets/images/profile.webp" alt="Profile Picture" class="profile-pic">
                 </div>
-                <h1>Muhammad Raihan Al Fadhil</h1>
-                <p>Engineer Endpoint Security CISO Mandiri</p>
+                <h1 data-translate="hero_name">Muhammad Raihan Al Fadhil</h1>
+                <p data-translate="hero_tagline">Engineer Endpoint Security CISO Mandiri</p>
                 <div class="social-links">
                     <a href="https://www.linkedin.com/in/mraihanalfadhil/" target="_blank" title="LinkedIn"><i class="fab fa-linkedin"></i></a>
                     <a href="https://wa.me/6287811003848" target="_blank" title="WhatsApp"><i class="fab fa-whatsapp"></i></a>
@@ -63,42 +108,42 @@
 
         <!-- Bagian About Me -->
         <section id="about" class="about section">
-            <div class="container glass-effect">
-                <h2>About Me</h2>
-                <p>Profesional di Bidang Network & Security Engineer dengan pengalaman lebih dari 1 tahun dalam mengimplementasikan kebijakan serta pengelolaan dan troubleshooting agar menjadi solusi keamanan jaringan yang memenuhi standar keamanan di CISO Mandiri.</p>
+            <div class="container glass-effect" data-scroll-reveal="right">
+                <h2 data-translate="about_title">About Me</h2>
+                <p data-translate="about_content">Profesional di Bidang Network & Security Engineer dengan pengalaman lebih dari 1 tahun dalam mengimplementasikan kebijakan serta pengelolaan dan troubleshooting agar menjadi solusi keamanan jaringan yang memenuhi standar keamanan di CISO Mandiri.</p>
             </div>
         </section>
 
         <!-- Bagian Skills -->
         <section id="skills" class="skills section">
-            <div class="container glass-effect">
-                <h2>My Services & Skills</h2>
+            <div class="container glass-effect" data-scroll-reveal="bottom">
+                <h2 data-translate="skills_title">My Services & Skills</h2>
                 <div class="skills-grid">
-                    <div class="skill-category">
-                        <h3>Pemrograman</h3>
+                    <div class="skill-category" data-scroll-reveal="bottom" data-scroll-delay="200">
+                        <h3 data-translate="skill_cat_programming">Pemrograman</h3>
                         <ul>
                             <li>Java</li>
                             <li>Python</li>
                             <li>C++</li>
                         </ul>
                     </div>
-                    <div class="skill-category">
-                        <h3>Manajemen Basis Data</h3>
+                    <div class="skill-category" data-scroll-reveal="bottom" data-scroll-delay="300">
+                        <h3 data-translate="skill_cat_database">Manajemen Basis Data</h3>
                         <ul>
                             <li>MySQL</li>
                             <li>PostgreSQL</li>
                         </ul>
                     </div>
-                    <div class="skill-category">
-                        <h3>Microsoft Office</h3>
+                    <div class="skill-category" data-scroll-reveal="bottom" data-scroll-delay="400">
+                        <h3 data-translate="skill_cat_office">Microsoft Office</h3>
                         <ul>
                             <li>Word</li>
                             <li>Excel</li>
                             <li>PowerPoint</li>
                         </ul>
                     </div>
-                    <div class="skill-category">
-                        <h3>Networking</h3>
+                    <div class="skill-category" data-scroll-reveal="bottom" data-scroll-delay="500">
+                        <h3 data-translate="skill_cat_networking">Networking</h3>
                         <ul>
                             <li>TCP/IP</li>
                             <li>VLAN</li>
@@ -109,24 +154,24 @@
                             <li>Firewall</li>
                         </ul>
                     </div>
-                    <div class="skill-category">
-                        <h3>Pengembangan Web</h3>
+                    <div class="skill-category" data-scroll-reveal="bottom" data-scroll-delay="600">
+                        <h3 data-translate="skill_cat_webdev">Pengembangan Web</h3>
                         <ul>
                             <li>HTML</li>
                             <li>CSS</li>
                             <li>JavaScript</li>
                         </ul>
                     </div>
-                    <div class="skill-category">
-                        <h3>Alat</h3>
+                    <div class="skill-category" data-scroll-reveal="bottom" data-scroll-delay="700">
+                        <h3 data-translate="skill_cat_tools">Alat</h3>
                         <ul>
                             <li>GitHub</li>
                             <li>Docker</li>
                             <li>Jenkins</li>
                         </ul>
                     </div>
-                    <div class="skill-category">
-                        <h3>Aplikasi Editor</h3>
+                    <div class="skill-category" data-scroll-reveal="bottom" data-scroll-delay="800">
+                        <h3 data-translate="skill_cat_editor">Aplikasi Editor</h3>
                         <ul>
                             <li>Photoshop</li>
                             <li>Coreldraw</li>
@@ -134,8 +179,8 @@
                             <li>Canva</li>
                         </ul>
                     </div>
-                    <div class="skill-category">
-                        <h3>Security Management Skills</h3>
+                    <div class="skill-category" data-scroll-reveal="bottom" data-scroll-delay="900">
+                        <h3 data-translate="skill_cat_security">Security Management Skills</h3>
                         <ul>
                             <li>NAC</li>
                             <li>Fire Eye</li>
@@ -150,10 +195,10 @@
 
         <!-- Bagian Contact -->
         <section id="contact" class="contact section">
-            <div class="container glass-effect">
-                <h2>Contact Me</h2>
-                <p>Email: <a href="mailto:raihan8muhammad@gmail.com">raihan8muhammad@gmail.com</a></p>
-                <p>LinkedIn: <a href="https://www.linkedin.com/in/mraihanalfadhil/" target="_blank">mraihanalfadhil</a></p>
+            <div class="container glass-effect" data-scroll-reveal="left">
+                <h2 data-translate="contact_title">Contact Me</h2>
+                <p data-translate="contact_email_label">Email: <a href="mailto:raihan8muhammad@gmail.com">raihan8muhammad@gmail.com</a></p>
+                <p data-translate="contact_linkedin_label">LinkedIn: <a href="https://www.linkedin.com/in/mraihanalfadhil/" target="_blank">mraihanalfadhil</a></p>
             </div>
         </section>
     </main>
@@ -162,19 +207,21 @@
     <div id="cv-preview-modal" class="modal">
         <div class="modal-content glass-effect">
             <button class="close-button" aria-label="Close CV preview">&times;</button>
-            <h3>Preview CV</h3>
+            <h3 data-translate="preview_cv_title">Preview CV</h3>
             <div class="pdf-viewer-container">
-                <!-- iframe akan diisi oleh JavaScript -->
                 <iframe id="cv-iframe" src="" frameborder="0" title="CV Preview"></iframe>
             </div>
-            <button id="confirm-download-modal" class="download-button">Download CV</button>
+            <button id="confirm-download-modal" class="download-button" data-translate="modal_download_cv">Download CV</button>
         </div>
     </div>
 
     <!-- Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
 
-    <!-- Custom JavaScript kita (harus setelah Bootstrap agar bisa menggunakan fitur Bootstrap jika diperlukan) -->
+    <!-- Scroll Reveal Library -->
+    <script src="https://unpkg.com/scrollreveal"></script>
+
+    <!-- Custom JavaScript kita -->
     <script src="assets/js/script.js"></script>
 </body>
 </html>
