--- a/index.html
+++ b/index.html
@@ -73,7 +73,8 @@
                 <li><a href="#contact" data-translate="nav_contact">Contact</a></li>
                 <li>
                     <button id="lang-toggle" class="lang-toggle" aria-label="Toggle language">
-                        <img src="assets/images/id_flag.png" alt="ID Flag" id="flag-icon" class="flag-icon">
+                        <!-- Placeholder untuk bendera ID -->
+                        <img src="https://via.placeholder.com/28x28/FF0000/FFFFFF?text=ID" alt="ID Flag" id="flag-icon" class="flag-icon">
                     </button>
                 </li>
                 <li><button id="theme-toggle" class="theme-toggle" aria-label="Toggle dark and light mode"><i class="fas fa-sun"></i></button></li>
@@ -92,7 +93,8 @@
         <section id="home" class="hero section">
             <div class="hero-content glass-effect" data-scroll-reveal="left">
                 <div class="profile-pic-container">
-                    <img src="assets/images/profile.webp" alt="Profile Picture" class="profile-pic">
+                    <!-- Placeholder untuk foto profil -->
+                    <img src="https://via.placeholder.com/300x300/343a40/ffffff?text=MRF" alt="Profile Picture" class="profile-pic">
                 </div>
                 <h1 data-translate="hero_name">Muhammad Raihan Al Fadhil</h1>
                 <p data-translate="hero_tagline">Engineer Endpoint Security CISO Mandiri</p>
@@ -216,7 +218,7 @@
     </div>
 
     <!-- Bootstrap Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXKK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
 
     <!-- Scroll Reveal Library -->
     <script src="https://unpkg.com/scrollreveal"></script>
