--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="id"> <!-- Default language will be Indonesian -->
+<html lang="id"> <!-- Default language will be Indonesian, changed by JS -->
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,21 +9,21 @@
     <meta name="description" data-translate="meta_description" content="Profil Web CV profesional Muhammad Raihan Al Fadhil, seorang Engineer Endpoint Security di CISO Mandiri dengan keahlian di Jaringan, Keamanan, Pemrograman, dan Pengembangan Web.">
     <meta name="keywords" data-translate="meta_keywords" content="Muhammad Raihan Al Fadhil, CV, Web CV, Engineer Endpoint Security, CISO Mandiri, Jaringan, Keamanan, Pemrograman, Python, Java, Web Development, Resume, IT Security, Portfolio">
     <meta name="author" content="Muhammad Raihan Al Fadhil">
-    <link rel="canonical" href="https://yourwebsite.com/"> <!-- Ganti dengan URL asli website kamu -->
+    <link rel="canonical" href="https://yourwebsite.com/"> <!-- GANTI dengan URL ASLI website kamu! -->
 
     <!-- Open Graph / Facebook / LinkedIn -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://yourwebsite.com/"> <!-- Ganti dengan URL asli website kamu -->
+    <meta property="og:url" content="https://yourwebsite.com/"> <!-- GANTI dengan URL ASLI website kamu! -->
     <meta property="og:title" data-translate="og_title" content="Muhammad Raihan Al Fadhil - Web CV">
     <meta property="og:description" data-translate="og_description" content="Profil Web CV profesional Muhammad Raihan Al Fadhil, seorang Engineer Endpoint Security di CISO Mandiri dengan keahlian di Jaringan, Keamanan, Pemrograman, dan Pengembangan Web.">
-    <meta property="og:image" content="https://yourwebsite.com/assets/images/profile.webp"> <!-- Ganti dengan URL lengkap profile.webp kamu -->
+    <meta property="og:image" content="https://yourwebsite.com/assets/images/profile.webp"> <!-- GANTI dengan URL ASLI gambar profile.webp kamu! -->
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="https://yourwebsite.com/"> <!-- Ganti dengan URL asli website kamu -->
+    <meta property="twitter:url" content="https://yourwebsite.com/"> <!-- GANTI dengan URL ASLI website kamu! -->
     <meta property="twitter:title" data-translate="twitter_title" content="Muhammad Raihan Al Fadhil - Web CV">
     <meta property="twitter:description" data-translate="twitter_description" content="Profil Web CV profesional Muhammad Raihan Al Fadhil, seorang Engineer Endpoint Security di CISO Mandiri dengan keahlian di Jaringan, Keamanan, Pemrograman, dan Pengembangan Web.">
-    <meta property="twitter:image" content="https://yourwebsite.com/assets/images/profile.webp"> <!-- Ganti dengan URL lengkap profile.webp kamu -->
+    <meta property="twitter:image" content="https://yourwebsite.com/assets/images/profile.webp"> <!-- GANTI dengan URL ASLI gambar profile.webp kamu! -->
 
     <!-- JSON-LD Schema Markup (Person) -->
     <script type="application/ld+json">
@@ -32,16 +32,17 @@
       "@type": "Person",
       "name": "Muhammad Raihan Al Fadhil",
       "jobTitle": "Engineer Endpoint Security CISO Mandiri",
-      "url": "https://yourwebsite.com/", <!-- Ganti dengan URL asli website kamu -->
-      "image": "https://yourwebsite.com/assets/images/profile.webp", <!-- Ganti dengan URL lengkap profile.webp kamu -->
+      "url": "https://yourwebsite.com/", <!-- GANTI dengan URL ASLI website kamu! -->
+      "image": "https://yourwebsite.com/assets/images/profile.webp", <!-- GANTI dengan URL ASLI gambar profile.webp kamu! -->
       "sameAs": [
         "https://www.linkedin.com/in/mraihanalfadhil/",
+        "https://wa.me/6287811003848",
         "https://www.facebook.com/lupanamasimi/",
         "https://www.instagram.com/kopi_jahe8/",
         "https://www.youtube.com/@raihanfadhil8"
       ],
-      "alumniOf": "Universitas Kamu (jika ada)", <!-- Tambahkan jika relevan -->
-      "knowsAbout": ["Network Security", "Endpoint Security", "Cybersecurity", "Programming", "Web Development"]
+      "alumniOf": "Universitas Kamu (jika ada)", <!-- Tambahkan jika relevan, misal: "Bina Nusantara University" -->
+      "knowsAbout": ["Network Security", "Endpoint Security", "Cybersecurity", "Programming", "Web Development", "Database Management"]
     }
     </script>
 
@@ -53,6 +54,7 @@
     
     <!-- Font Awesome untuk ikon (social, theme toggle, burger menu) -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    
     <!-- Favicon.ico langsung di root folder -->
     <link rel="icon" href="favicon.ico" type="image/x-icon"> 
 </head>
@@ -73,7 +75,7 @@
                 <li><a href="#contact" data-translate="nav_contact">Contact</a></li>
                 <li>
                     <button id="lang-toggle" class="lang-toggle" aria-label="Toggle language">
-                        <!-- Placeholder untuk bendera ID -->
+                        <!-- Placeholder untuk bendera ID, akan diubah oleh JS -->
                         <img src="https://via.placeholder.com/28x28/FF0000/FFFFFF?text=ID" alt="ID Flag" id="flag-icon" class="flag-icon">
                     </button>
                 </li>
@@ -93,7 +95,7 @@
         <section id="home" class="hero section">
             <div class="hero-content glass-effect" data-scroll-reveal="left">
                 <div class="profile-pic-container">
-                    <!-- Placeholder untuk foto profil -->
+                    <!-- Placeholder untuk foto profil, akan diganti dengan profile.webp kamu -->
                     <img src="https://via.placeholder.com/300x300/343a40/ffffff?text=MRF" alt="Profile Picture" class="profile-pic">
                 </div>
                 <h1 data-translate="hero_name">Muhammad Raihan Al Fadhil</h1>
@@ -182,48 +184,4 @@
                         </ul>
                     </div>
                     <div class="skill-category" data-scroll-reveal="bottom" data-scroll-delay="900">
-                        <h3 data-translate="skill_cat_security">Security Management Skills</h3>
-                        <ul>
-                            <li>NAC</li>
-                            <li>Fire Eye</li>
-                            <li>Trellix Data Loss Prevention</li>
-                            <li>Trend Micro Apex One</li>
-                            <li>Trend Micro Vision One (XDR)</li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-        </section>
-
-        <!-- Bagian Contact -->
-        <section id="contact" class="contact section">
-            <div class="container glass-effect" data-scroll-reveal="left">
-                <h2 data-translate="contact_title">Contact Me</h2>
-                <p data-translate="contact_email_label">Email: <a href="mailto:raihan8muhammad@gmail.com">raihan8muhammad@gmail.com</a></p>
-                <p data-translate="contact_linkedin_label">LinkedIn: <a href="https://www.linkedin.com/in/mraihanalfadhil/" target="_blank">mraihanalfadhil</a></p>
-            </div>
-        </section>
-    </main>
-
-    <!-- Modal untuk Preview CV -->
-    <div id="cv-preview-modal" class="modal">
-        <div class="modal-content glass-effect">
-            <button class="close-button" aria-label="Close CV preview">&times;</button>
-            <h3 data-translate="preview_cv_title">Preview CV</h3>
-            <div class="pdf-viewer-container">
-                <iframe id="cv-iframe" src="" frameborder="0" title="CV Preview"></iframe>
-            </div>
-            <button id="confirm-download-modal" class="download-button" data-translate="modal_download_cv">Download CV</button>
-        </div>
-    </div>
-
-    <!-- Bootstrap Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXKK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
-
-    <!-- Scroll Reveal Library -->
-    <script src="https://unpkg.com/scrollreveal"></script>
-
-    <!-- Custom JavaScript kita -->
-    <script src="assets/js/script.js"></script>
-</body>
-</html>
+                        <h3 data-translate="skill_cat_security">K
