--- a/index.html
+++ b/index.html
@@ -184,4 +184,48 @@
                         </ul>
                     </div>
                     <div class="skill-category" data-scroll-reveal="bottom" data-scroll-delay="900">
-                        <h3 data-translate="skill_cat_security">K
+                        <h3 data-translate="skill_cat_security">Keahlian Manajemen Keamanan</h3>
+                        <ul>
+                            <li>NAC</li>
+                            <li>Fire Eye</li>
+                            <li>Trellix Data Loss Prevention</li>
+                            <li>Trend Micro Apex One</li>
+                            <li>Trend Micro Vision One (XDR)</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Bagian Contact -->
+        <section id="contact" class="contact section">
+            <div class="container glass-effect" data-scroll-reveal="left">
+                <h2 data-translate="contact_title">Contact Me</h2>
+                <p data-translate="contact_email_label">Email: <a href="mailto:raihan8muhammad@gmail.com">raihan8muhammad@gmail.com</a></p>
+                <p data-translate="contact_linkedin_label">LinkedIn: <a href="https://www.linkedin.com/in/mraihanalfadhil/" target="_blank">mraihanalfadhil</a></p>
+            </div>
+        </section>
+    </main>
+
+    <!-- Modal untuk Preview CV -->
+    <div id="cv-preview-modal" class="modal">
+        <div class="modal-content glass-effect">
+            <button class="close-button" aria-label="Close CV preview">&times;</button>
+            <h3 data-translate="preview_cv_title">Preview CV</h3>
+            <div class="pdf-viewer-container">
+                <iframe id="cv-iframe" src="" frameborder="0" title="CV Preview"></iframe>
+            </div>
+            <button id="confirm-download-modal" class="download-button" data-translate="modal_download_cv">Download CV</button>
+        </div>
+    </div>
+
+    <!-- Bootstrap Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
+
+    <!-- Scroll Reveal Library -->
+    <script src="https://unpkg.com/scrollreveal"></script>
+
+    <!-- Custom JavaScript kita -->
+    <script src="assets/js/script.js"></script>
+</body>
+</html>
