--- a/index.html
+++ b/index.html
@@ -1,28 +1,28 @@
 <!DOCTYPE html>
-<html lang="id"> <!-- Default language will be Indonesian, changed by JS -->
+<html lang="id">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title data-translate="title">Muhammad Raihan Al Fadhil - Web CV</title>
+    <title>Muhammad Raihan Al Fadhil - Web CV</title>
 
     <!-- SEO Meta Tags -->
-    <meta name="description" data-translate="meta_description" content="Profil Web CV profesional Muhammad Raihan Al Fadhil, seorang Engineer Endpoint Security di CISO Mandiri dengan keahlian di Jaringan, Keamanan, Pemrograman, dan Pengembangan Web.">
-    <meta name="keywords" data-translate="meta_keywords" content="Muhammad Raihan Al Fadhil, CV, Web CV, Engineer Endpoint Security, CISO Mandiri, Jaringan, Keamanan, Pemrograman, Python, Java, Web Development, Resume, IT Security, Portfolio">
+    <meta name="description" content="Profil Web CV profesional Muhammad Raihan Al Fadhil, seorang Engineer Endpoint Security di CISO Mandiri dengan keahlian di Jaringan, Keamanan, Pemrograman, dan Pengembangan Web.">
+    <meta name="keywords" content="Muhammad Raihan Al Fadhil, CV, Web CV, Engineer Endpoint Security, CISO Mandiri, Jaringan, Keamanan, Pemrograman, Python, Java, Web Development, Resume, IT Security, Portfolio">
     <meta name="author" content="Muhammad Raihan Al Fadhil">
     <link rel="canonical" href="https://yourwebsite.com/"> <!-- GANTI dengan URL ASLI website kamu! -->
 
     <!-- Open Graph / Facebook / LinkedIn -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://yourwebsite.com/"> <!-- GANTI dengan URL ASLI website kamu! -->
-    <meta property="og:title" data-translate="og_title" content="Muhammad Raihan Al Fadhil - Web CV">
-    <meta property="og:description" data-translate="og_description" content="Profil Web CV profesional Muhammad Raihan Al Fadhil, seorang Engineer Endpoint Security di CISO Mandiri dengan keahlian di Jaringan, Keamanan, Pemrograman, dan Pengembangan Web.">
+    <meta property="og:title" content="Muhammad Raihan Al Fadhil - Web CV">
+    <meta property="og:description" content="Profil Web CV profesional Muhammad Raihan Al Fadhil, seorang Engineer Endpoint Security di CISO Mandiri dengan keahlian di Jaringan, Keamanan, Pemrograman, dan Pengembangan Web.">
     <meta property="og:image" content="https://yourwebsite.com/assets/images/profile.webp"> <!-- GANTI dengan URL ASLI gambar profile.webp kamu! -->
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://yourwebsite.com/"> <!-- GANTI dengan URL ASLI website kamu! -->
-    <meta property="twitter:title" data-translate="twitter_title" content="Muhammad Raihan Al Fadhil - Web CV">
-    <meta property="twitter:description" data-translate="twitter_description" content="Profil Web CV profesional Muhammad Raihan Al Fadhil, seorang Engineer Endpoint Security di CISO Mandiri dengan keahlian di Jaringan, Keamanan, Pemrograman, dan Pengembangan Web.">
+    <meta property="twitter:title" content="Muhammad Raihan Al Fadhil - Web CV">
+    <meta property="twitter:description" content="Profil Web CV profesional Muhammad Raihan Al Fadhil, seorang Engineer Endpoint Security di CISO Mandiri dengan keahlian di Jaringan, Keamanan, Pemrograman, dan Pengembangan Web.">
     <meta property="twitter:image" content="https://yourwebsite.com/assets/images/profile.webp"> <!-- GANTI dengan URL ASLI gambar profile.webp kamu! -->
 
     <!-- JSON-LD Schema Markup (Person) -->
@@ -69,18 +69,12 @@
         <nav class="navbar container">
             <div class="logo">MRF</div>
             <ul class="nav-links">
-                <li><a href="#home" data-translate="nav_home">Home</a></li>
-                <li><a href="#about" data-translate="nav_about">About</a></li>
-                <li><a href="#skills" data-translate="nav_skills">Skills</a></li>
-                <li><a href="#contact" data-translate="nav_contact">Contact</a></li>
-                <li>
-                    <button id="lang-toggle" class="lang-toggle" aria-label="Toggle language">
-                        <!-- Placeholder untuk bendera ID, akan diubah oleh JS -->
-                        <img src="https://via.placeholder.com/28x28/FF0000/FFFFFF?text=ID" alt="ID Flag" id="flag-icon" class="flag-icon">
-                    </button>
-                </li>
+                <li><a href="#home">Home</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#skills">Skills</a></li>
+                <li><a href="#contact">Contact</a></li>
                 <li><button id="theme-toggle" class="theme-toggle" aria-label="Toggle dark and light mode"><i class="fas fa-sun"></i></button></li>
-                <li><button id="download-cv" class="download-button" data-translate="nav_download_cv">Download CV</button></li>
+                <li><button id="download-cv" class="download-button">Unduh CV</button></li>
             </ul>
             <!-- Burger menu untuk tampilan mobile -->
             <div class="burger-menu" id="burger-menu" aria-label="Open navigation menu">
@@ -95,11 +89,10 @@
         <section id="home" class="hero section">
             <div class="hero-content glass-effect" data-scroll-reveal="left">
                 <div class="profile-pic-container">
-                    <!-- Placeholder untuk foto profil, akan diganti dengan profile.webp kamu -->
-                    <img src="https://via.placeholder.com/300x300/343a40/ffffff?text=MRF" alt="Profile Picture" class="profile-pic">
+                    <img src="assets/images/profile.webp" alt="Profile Picture" class="profile-pic">
                 </div>
-                <h1 data-translate="hero_name">Muhammad Raihan Al Fadhil</h1>
-                <p data-translate="hero_tagline">Engineer Endpoint Security CISO Mandiri</p>
+                <h1>Muhammad Raihan Al Fadhil</h1>
+                <p>Engineer Endpoint Security CISO Mandiri</p>
                 <div class="social-links">
                     <a href="https://www.linkedin.com/in/mraihanalfadhil/" target="_blank" title="LinkedIn"><i class="fab fa-linkedin"></i></a>
                     <a href="https://wa.me/6287811003848" target="_blank" title="WhatsApp"><i class="fab fa-whatsapp"></i></a>
@@ -113,18 +106,18 @@
         <!-- Bagian About Me -->
         <section id="about" class="about section">
             <div class="container glass-effect" data-scroll-reveal="right">
-                <h2 data-translate="about_title">About Me</h2>
-                <p data-translate="about_content">Profesional di Bidang Network & Security Engineer dengan pengalaman lebih dari 1 tahun dalam mengimplementasikan kebijakan serta pengelolaan dan troubleshooting agar menjadi solusi keamanan jaringan yang memenuhi standar keamanan di CISO Mandiri.</p>
+                <h2>Tentang Saya</h2>
+                <p>Profesional di Bidang Network & Security Engineer dengan pengalaman lebih dari 1 tahun dalam mengimplementasikan kebijakan serta pengelolaan dan troubleshooting agar menjadi solusi keamanan jaringan yang memenuhi standar keamanan di CISO Mandiri.</p>
             </div>
         </section>
 
         <!-- Bagian Skills -->
         <section id="skills" class="skills section">
             <div class="container glass-effect" data-scroll-reveal="bottom">
-                <h2 data-translate="skills_title">My Services & Skills</h2>
+                <h2>Layanan & Keahlian Saya</h2>
                 <div class="skills-grid">
                     <div class="skill-category" data-scroll-reveal="bottom" data-scroll-delay="200">
-                        <h3 data-translate="skill_cat_programming">Pemrograman</h3>
+                        <h3>Pemrograman</h3>
                         <ul>
                             <li>Java</li>
                             <li>Python</li>
@@ -132,14 +125,14 @@
                         </ul>
                     </div>
                     <div class="skill-category" data-scroll-reveal="bottom" data-scroll-delay="300">
-                        <h3 data-translate="skill_cat_database">Manajemen Basis Data</h3>
+                        <h3>Manajemen Basis Data</h3>
                         <ul>
                             <li>MySQL</li>
                             <li>PostgreSQL</li>
                         </ul>
                     </div>
                     <div class="skill-category" data-scroll-reveal="bottom" data-scroll-delay="400">
-                        <h3 data-translate="skill_cat_office">Microsoft Office</h3>
+                        <h3>Microsoft Office</h3>
                         <ul>
                             <li>Word</li>
                             <li>Excel</li>
@@ -147,7 +140,7 @@
                         </ul>
                     </div>
                     <div class="skill-category" data-scroll-reveal="bottom" data-scroll-delay="500">
-                        <h3 data-translate="skill_cat_networking">Networking</h3>
+                        <h3>Networking</h3>
                         <ul>
                             <li>TCP/IP</li>
                             <li>VLAN</li>
@@ -159,7 +152,7 @@
                         </ul>
                     </div>
                     <div class="skill-category" data-scroll-reveal="bottom" data-scroll-delay="600">
-                        <h3 data-translate="skill_cat_webdev">Pengembangan Web</h3>
+                        <h3>Pengembangan Web</h3>
                         <ul>
                             <li>HTML</li>
                             <li>CSS</li>
@@ -167,7 +160,7 @@
                         </ul>
                     </div>
                     <div class="skill-category" data-scroll-reveal="bottom" data-scroll-delay="700">
-                        <h3 data-translate="skill_cat_tools">Alat</h3>
+                        <h3>Alat</h3>
                         <ul>
                             <li>GitHub</li>
                             <li>Docker</li>
@@ -175,7 +168,7 @@
                         </ul>
                     </div>
                     <div class="skill-category" data-scroll-reveal="bottom" data-scroll-delay="800">
-                        <h3 data-translate="skill_cat_editor">Aplikasi Editor</h3>
+                        <h3>Aplikasi Editor</h3>
                         <ul>
                             <li>Photoshop</li>
                             <li>Coreldraw</li>
@@ -184,7 +177,7 @@
                         </ul>
                     </div>
                     <div class="skill-category" data-scroll-reveal="bottom" data-scroll-delay="900">
-                        <h3 data-translate="skill_cat_security">Keahlian Manajemen Keamanan</h3>
+                        <h3>Keahlian Manajemen Keamanan</h3>
                         <ul>
                             <li>NAC</li>
                             <li>Fire Eye</li>
@@ -200,9 +193,9 @@
         <!-- Bagian Contact -->
         <section id="contact" class="contact section">
             <div class="container glass-effect" data-scroll-reveal="left">
-                <h2 data-translate="contact_title">Contact Me</h2>
-                <p data-translate="contact_email_label">Email: <a href="mailto:raihan8muhammad@gmail.com">raihan8muhammad@gmail.com</a></p>
-                <p data-translate="contact_linkedin_label">LinkedIn: <a href="https://www.linkedin.com/in/mraihanalfadhil/" target="_blank">mraihanalfadhil</a></p>
+                <h2>Hubungi Saya</h2>
+                <p>Email: <a href="mailto:raihan8muhammad@gmail.com">raihan8muhammad@gmail.com</a></p>
+                <p>LinkedIn: <a href="https://www.linkedin.com/in/mraihanalfadhil/" target="_blank">mraihanalfadhil</a></p>
             </div>
         </section>
     </main>
@@ -211,11 +204,11 @@
     <div id="cv-preview-modal" class="modal">
         <div class="modal-content glass-effect">
             <button class="close-button" aria-label="Close CV preview">&times;</button>
-            <h3 data-translate="preview_cv_title">Preview CV</h3>
+            <h3>Pratinjau CV</h3>
             <div class="pdf-viewer-container">
                 <iframe id="cv-iframe" src="" frameborder="0" title="CV Preview"></iframe>
             </div>
-            <button id="confirm-download-modal" class="download-button" data-translate="modal_download_cv">Download CV</button>
+            <button id="confirm-download-modal" class="download-button">Unduh CV</button>
         </div>
     </div>
 
